// Water System Web - Data Structure (DBML)
// Note: This is documentation/blueprint only (no migrations).

// Laravel authentication users table
Table users {
  id integer [primary key]
  name varchar
  email varchar [unique]
  email_verified_at datetime [null]
  password varchar
  remember_token varchar [null]
  created_at datetime
  updated_at datetime
}

Table customer {
  customer_id integer [primary key]
  account_no varchar [unique]       // "M001", "B001", etc.
  type_id integer    
  customer_name varchar
  deduction_id integer
  brgy_id integer
  address varchar
  previous_reading integer
  status customer_status [not null, default: 'active']
  Synced boolean
  created_at datetime
  updated_at datetime
  last_sync datetime
  indexes {
    account_no [unique]
  }
}
  Enum customer_status {
  active
  disconnected
}

Table customer_type {
  type_id integer [primary key]
  type_name varchar [unique]          // residential, commercial, industrial
  rate_per_m3 decimal(10,2)          // normal rate per cubic meter
  min_m3 integer [default: 0]        // minimum cubic meters to charge
  min_charge decimal(10,2)           // optional: minimum charge if min_m3 applies
  penalty decimal(10,2)  
  Synced boolean
  last_sync datetime
  created_at datetime
  updated_at datetime
}

Table reading {
  reading_id integer [primary key]
  customer_id integer 
  customer_account_number varchar
  device_uid varchar
  previous_reading integer
  current_reading integer
  usage_m3 integer
  reading_at datetime
  read_by_user_id integer [null]
  Synced boolean
  last_sync datetime
  created_at datetime
  updated_at datetime
}

Table bill {
  bill_id integer [primary key]
  reference_number varchar [unique]
  customer_id integer
  customer_account_number varchar
  device_uid varchar
  reading_id integer
  bill_date date 
  rate_per_m3 decimal
  charges decimal
  penalty decimal
  total_due decimal 
  due_date date [null]
  // Optional: "DRAFT", "ISSUED", "PAID", "VOID"
  status bill_status [not null, default: 'Pending']
  Synced boolean
  last_sync datetime
  created_at datetime
  updated_at datetime
  indexes {
    reference_number [unique]
    customer_id
  }
}
enum bill_status{
  Paid
  Void
  Pending
  Due
}

// Optional: track devices that sync readings/bills
Table device    {
  brgy_id integer       
  device_mac varchar
  device_uid varchar
  firmware_version varchar
  device_name varchar [null]          // each device belongs to one barangay
  print_count integer
  customer_count integer
  last_sync datetime
  created_at datetime
  updated_at datetime
  indexes {
    device_mac [unique]
  }
}

Table bill_transaction {
  bill_transaction_id integer [primary key]
  bill_reference_number varchar [unique]
  device_uid varchar
  type enum('payment', 'void')
  source enum('Office',"Device")
  amount decimal(10, 2)
  cash_received decimal(10, 2) [null]
  change decimal(10, 2)
  transaction_date datetime  
  payment_method varchar
  processed_by_user_id integer [null]
  processed_by_device_uid varchar [null]
  notes text [null]
  Synced boolean
  last_sync datetime
  created_at datetime
  updated_at datetime
}

Table barangay_sequence {
  brgy_id integer [primary key,increment]   // numeric ID for joins
  barangay varchar [unique]       // "Makilas", "Buluan", etc.
  prefix char(1)                  // "M", "B", "D", "C"
  next_number integer             // next available account number
  updated_at datetime
}
// ('Dona Josefa', 'D', 1, NOW()),
// ('Makilas',     'M', 1, NOW()),
// ('Buluan',      'B', 1, NOW()),
// ('Caparan',     'C', 1, NOW());

Table deduction {
  deduction_id integer [primary key]
  name varchar [unique]           // e.g., "Senior Citizen", "SSS"
  type enum('percentage', 'fixed') // whether deduction is % of bill or fixed amount
  value decimal(10,2)             // amount or percentage
  created_at datetime
  updated_at datetime
}

Table customer_deduction {
  customer_id integer
  deduction_id integer
  created_at datetime
  updated_at datetime

  indexes {
    (customer_id, deduction_id) [unique]
  }
}

Table bill_deduction {
  bill_deduction_id integer [primary key]
  bill_id integer 
  deduction_id integer
  amount decimal(10,2)   // actual deduction applied
  created_at datetime
  updated_at datetime
}

Table settings {
  id integer [primary key]
  bill_due_days integer [default: 5] 
  disconnection_days integer [default: 8] 
  created_at datetime
  updated_at datetime
}  

Ref: customer.deduction_id > deduction.deduction_id
Ref: reading.customer_id > customer.customer_id
Ref: bill.customer_id > customer.customer_id
Ref: bill.reading_id > reading.reading_id
Ref: device.brgy_id > barangay_sequence.brgy_id
Ref: customer.brgy_id > barangay_sequence.brgy_id// References to Laravel's existing users table
Ref: reading.read_by_user_id > users.id
Ref: bill_transaction.bill_reference_number > bill.reference_number
Ref: bill_transaction.processed_by_user_id > users.id
Ref: reading.device_uid > device.device_uid
Ref: customer.type_id > customer_type.type_id
Ref: customer_deduction.customer_id > customer.customer_id
Ref: customer_deduction.deduction_id > deduction.deduction_id
Ref: bill_deduction.bill_id > bill.bill_id
Ref: bill_deduction.deduction_id > deduction.deduction_id
Ref: bill.device_uid > device.device_uid
Ref: bill_transaction. processed_by_device_uid > device.device_uid
